# llm

./: .clang-format  .gitignore  CHANGES.md  CMakeLists.txt  FIX_SUMMARY.md  README.md  build.bs  data.txt  debug-2.txt  debug.txt  download_dataset.py  overfit-verify.bs  start-web-ui.sh
datasets/tinystories-small/: 20k.txt
datasets/wiki-trunc/: th.txt
datasets/wikipedia/: talking_heads.txt
src/: main.cpp
src/commands/: arg_parser.cpp  arg_parser.h  arg_parser.hpp  init_model.cpp  init_model.hpp  perf_model.cpp  perf_model.hpp  predict.cpp  predict.h  test_ff.cpp  train.cpp  train.h  train_tokenizer.cpp  train_tokenizer.hpp  util.h  util.hpp
src/dataset/: dataset.hpp  dataset_factory.cpp  dataset_factory.h  dataset_factory.hpp
src/inference/: attention.cpp  attention.hpp  embedding.cpp  embedding.hpp  feed_forward.cpp  feed_forward.hpp  inference.cpp  inference.hpp  layer_normalize.cpp  layer_normalize.hpp  linearized_attention.cpp  linearized_attention.hpp  logit_layer.cpp  logit_layer.hpp  network_node.hpp  node_type.hpp  optimizer.cpp  optimizer.hpp  recursion_node.cpp  recursion_node.hpp  rms_normalize.cpp  rms_normalize.hpp
src/input/: input_data.cpp  input_data.h
src/kernels/: embedding_layer.cu  embedding_layer.hpp  feed_forward.cu  feed_forward.hpp  kernel_utils.hpp  layer_norm.cu  layer_norm.hpp  logit_layer.cu  logit_layer.hpp  matrix.hpp  matrix_device_kernels.cuh  matrix_device_kernels.hpp  matrix_global_kernels.hpp  matrix_kernels.cu  matrix_kernels.hpp  optimizer.cu  optimizer.hpp  pools.cu  pools.hpp  scheduling.cu  scheduling.cuh  scheduling.hpp
src/kernels/layers/: embedding_layer.cu  feed_forward.cu  feed_forward.hpp  layer_norm.cu  logit_layer.cu  logit_layer.hpp
src/kernels/matrix/: cublas.cu  cublas.hpp  device.cu  device.cuh  host.cu  host.hpp  kernels.cu  kernels.hpp  mapping.cuh  mapping.hpp  pools.cu  pools.cuh
src/model_factories/: standard_model.cpp  standard_model.hpp
src/network/: attention.cpp  attention.h  embedding.cpp  embedding.h  feed_forward.cpp  feed_forward.h  logit_layer.cpp  logit_layer.h  neural_net.cpp  neural_net.h
src/network/tokenizer/: token.cpp
src/nodes/: attention.cpp  attention.hpp  embedding.cpp  embedding.hpp  feed_forward.cpp  feed_forward.hpp  logit_layer.cpp  logit_layer.hpp  network_node.hpp  neural_net.cpp  neural_net.hpp  node_type.hpp
src/tokenizer/: token.cpp  token.h  token.hpp  tokenizer.cpp  tokenizer.h  tokenizer.hpp
src/training/: backpropogation.cpp  backpropogation.h  backpropogation.hpp  optimizer.cpp  optimizer.hpp  testing.cpp  testing.h  testing.hpp  training.cpp  training.h  training.hpp
src/util/: assert.cpp  assert.h  logger.cpp  logger.hpp  matrix.cpp  matrix.cu  matrix.h  matrix.hpp
web-frontend/: package-lock.json  package.json
web-frontend/src/: server.ts
web-frontend/src/public/: app.js  index.html
